testsuite/poke.pkl/lt-f64-diag-1.pk
/* { dg-do compile } */

var res
  = 7U .< 1L; /* { dg-error "mismatch between the width of LHS and RHS.*" } */
